@@ -1,3 +1,9 @@
+2009-08-31 Raphael Neider <rneider AT web.de>
+
+	* device/lib/_fsmul.c, device/lib/pic/libsdcc/fsmul.c,
+	  device/lib/pic16/libsdcc/float/fsmul.c: fix overflow during rounding
+	* support/regression/tests/float.c: add testcase for the fix
+
 2009-08-29 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (aopGet): applied patch 2837100 to fix bug 2805333
